@@ -138,4 +138,6 @@
 
 /(((a\2)|(a*)\g<-1>))*a?/
 
+/((?+1)(\1))/
+
 # End of testinput8
